--- a/donate.html
+++ b/donate.html
@@ -11,6 +11,7 @@
   
   
   <title>Donate</title>
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -56,21 +57,19 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="https://audiomack.com/eadvernon">Music (Audiomack)</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobirise.com">Just Dance Meme Edition</a></li>
-                    <li class="nav-item"><a class="nav-link link text-black display-4" href="https://blog.spacehey.com/user?id=1579207">Blog (SH)<br></a></li></ul>
+                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="https://audiomack.com/eadvernon">Music (Audiomack)</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="justdancememeedition.html">Just Dance Meme Edition</a></li>
+                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="https://www.reddit.com/r/eadvernonreuploads/?f=flair_name%3A%22Blog%22">Blog (Reddit)<br></a></li></ul>
                 <div class="icons-menu">
-                    <a class="iconfont-wrapper" href="https://spacehey.com/profile?id=1579207" target="_blank">
-                        <span class="p-2 mbr-iconfont socicon-myspace socicon"></span>
-                    </a>
-                    <a class="iconfont-wrapper" href="https://mobiri.se" target="_blank">
-                        <span class="p-2 mbr-iconfont socicon-twitter socicon"></span>
-                    </a>
-                    <a class="iconfont-wrapper" href="https://www.reddit.com/user/Past-Background-6740" target="_blank">
+                    <a class="iconfont-wrapper" href="https://www.reddit.com/user/Past-Background-6740/" target="_blank">
                         <span class="p-2 mbr-iconfont socicon-reddit socicon"></span>
                     </a>
-                    <a class="iconfont-wrapper" href="https://www.tiktok.com/@ttsvernon" target="_blank">
-                        <span class="p-2 mbr-iconfont socicon-tiktok socicon"></span>
+                    <a class="iconfont-wrapper" href="https://twitter.com/sbbooba" target="_blank">
+                        <span class="p-2 mbr-iconfont socicon-twitter socicon"></span>
                     </a>
+                    <a class="iconfont-wrapper" href="https://www.bandlab.com/eadvernon" target="_blank">
+                        <span class="p-2 mbr-iconfont mobi-mbri-music mobi-mbri" style="color: rgb(255, 138, 138); fill: rgb(255, 138, 138);"></span>
+                    </a>
+                    
                 </div>
                 <div class="navbar-buttons mbr-section-btn"><a class="btn btn-success display-4" href="donate.html">Donate Creator</a></div>
             </div>
@@ -188,12 +187,12 @@
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright since 2016 Ead Vernon (other aliases &amp; projects) - All Rights Reserved
+                    © Copyright since 2015 Ead Vernon (other aliases &amp; projects) - All Rights Reserved
                 </p>
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2845797" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Built with &#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/web-design-program.html">Web Design Program</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2845797" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with &#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/no-code-website-builder.html">No Code Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
