--- a/donate.html
+++ b/donate.html
@@ -94,16 +94,15 @@
             <div class="col-md-12 col-lg-10">
                 <div class="row justify-content-center">
                     <div class="col-12 col-lg-6">
-                        <ul class="list mbr-fonts-style display-7">
-                            <li><strong>Bitcoin (₿)</strong><br>bc1qeg4rkd9d6w742gnxyzfzesk44uepvdn8lsqr2k</li>
-                            <li><strong>Ethereum (ETH)</strong><br>0xC50D13067F0DB569447BC8D85E1cF054558b6a35</li>
-                            <li><strong>Litecoin</strong><br>ltc1q454588dpc6pqmpw4kl8fd2v4mcnzr5rvj9wdaz</li><li><strong>Dogecoin</strong><br>DUEBVfQS6PjvRdbFsjyDzZW1KurkCzpCEK</li><li><strong>Monero</strong><br>46TC4TphvmQYkDHcucSzLgj5V8Ux79BG66PFU4mrpfonS3zsY833ano45D2rCXTqKt5sVDjpmSF5ccF1z8ZehYoQ4xsNQpt</li><li><strong>Bitcoin Cash</strong><br>qreuzcd9wzywuf0qgwdarugaexye5nfae5gelszhfs</li><li><strong>Binance Coin (BNB)</strong><br>bnb1kxjtfnncpmrj3w6ep643tgrnndjdu8l4e6uu3k</li><li><strong>Verge (PornHub Coin)</strong><br>DEB2j8pDcSzDiaGqNsGGvVr5HSzD6ptx8g</li><li><strong>Cashapp:</strong> $eadvernon</li>
+                        <ul class="list mbr-fonts-style display-5">
+                            <li><strong>Bitcoin (₿)</strong><br>177od3qH3EwpoX1MZrszPNArABcURUvv8D</li>
+                            <li><strong>Ethereum (ETH)</strong><br>0x937D2d9d115fd8526481c58f62c6b825AdA8a9BA</li><li><strong>Dogecoin</strong><br>DKkGPSsR2kXNuvaHgsi9fQ3rwnhCqeBwJn</li><li><strong>Monero</strong><br>46ZkbeT43fNDygPd6T3JyKabCdWpgfbvJCpHESJwDNFZEHv2PRGsRB5KhUsn2tJLBgTUzA8CjqQxbcY8JiW6DPMSJCXKPMJ</li><li><strong>Verge (PornHub Coin)</strong><br>DP1sBpS6MgndHzoYSy7Ts7Q4y3UMh6TdYY</li><li><strong>Cashapp:</strong> $eadvernon</li>
                         </ul>
                     </div>
                     <div class="col-12 col-lg-6">
-                        <ul class="list mbr-fonts-style display-7">
-                            <li><strong>LBRY Credits (Odysee Token)</strong><br>lbc1q6xt6tkn6my46kmvsdrunnsnhsglx648lnta5up</li>
-                            <li><strong>Ripple<br></strong>rGG4d65QunkKPzLTB3HafqiE3cDB1mR7WN</li><li><strong>Tron</strong><br>TBom1JKTt4brRdywixKEaQup4pYNGnEUku</li><li><strong>GameCredits</strong><br>GNw52okpVaXwz7sSviPKWGAsCwiTTsMWWu</li><li><strong>Dash</strong><br>XtkueLrXgJixi3tXR3PyeDf52oejWbu6em</li><li><strong>Peercoin</strong><br>PFV9TSwMAYM9x6STFGPG8xC3bq3JU31gHJ</li><li><strong>Zcash</strong><br>t1VXVkZ7Q77zVpLSG5LjoxLDZqZgkePjwWH</li><li><strong>Vertcoin</strong><br>vtc1qppyqrau2ggcsrdwsm5rd0w62vsap6wy8m573r4</li><li><strong>Litecoin Cash</strong><br>CK9AJoATUepXaapAEWK7ytiQdyJ1s1EAUv</li><li><strong>Zcoin</strong><br>a9ekLYvBnwD8VhqjzgNDtk1LNdTXyrNUuT</li>
+                        <ul class="list mbr-fonts-style display-5">
+                            <li><strong>LBRY Credits (Odysee Token)</strong><br>bM16kUuYcAhGahZFxbrn3nLnTpJz9VqTn7</li>
+                            <li><strong>Ripple<br></strong>r3xtp4j53SWAJoseFMWHTaSimbs5HZSda9</li>
                         </ul>
                     </div>
                 </div>
@@ -192,7 +191,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2845797" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with &#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/landing-page-builder.html">Landing Page Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2845797" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with &#8204;</p><a style="z-index:1" href="https://mobirise.com/drag-drop-website-builder.html">Drag and Drop Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
