--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="container">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobiri.se">
+                    <a href="https://www.youtube.com/watch?v=QOhmcbfwxnA">
                         <img src="assets/images/avatars-000467405271-xt6xn6-t500x500-121x121.jpg" alt="Mobirise Website Builder" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -337,8 +337,8 @@
         </div>
         <div class="row mbr-gallery mt-4">
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tAI6QOSzgz-modal" data-bs-target="#tAI6QOSzgz-modal">
-                    <img class="w-100" src="assets/images/20230302011936-1-596x596.png" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-tAI6QOSzgz" data-bs-target="#lb-tAI6QOSzgz">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tAI7ua2jDC-modal" data-bs-target="#tAI7ua2jDC-modal">
+                    <img class="w-100" src="assets/images/20230302011936-1-596x596.png" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-tAI7ua2jDC" data-bs-target="#lb-tAI7ua2jDC">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -346,8 +346,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=ead%20mcmusic" class="text-info">Ead MCmusic</a></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tAI6QOSzgz-modal" data-bs-target="#tAI6QOSzgz-modal">
-                    <a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=meisterhaft%20remo"><img class="w-100" src="assets/images/animegan-toon-meisteemo-596x539.png" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tAI6QOSzgz" data-bs-target="#lb-tAI6QOSzgz"></a>
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tAI7ua2jDC-modal" data-bs-target="#tAI7ua2jDC-modal">
+                    <a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=meisterhaft%20remo"><img class="w-100" src="assets/images/animegan-toon-meisteemo-596x539.png" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tAI7ua2jDC" data-bs-target="#lb-tAI7ua2jDC"></a>
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -355,8 +355,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=meisterhaft%20remo" class="text-info">Meisterhaft Remo</a></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tAI6QOSzgz-modal" data-bs-target="#tAI6QOSzgz-modal">
-                    <a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=qwerty%20garbage"><img class="w-100" src="assets/images/cix2cs4diy9mj8tdurxl-3-qoium-512x512.jpg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tAI6QOSzgz" data-bs-target="#lb-tAI6QOSzgz"></a>
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tAI7ua2jDC-modal" data-bs-target="#tAI7ua2jDC-modal">
+                    <a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=qwerty%20garbage"><img class="w-100" src="assets/images/cix2cs4diy9mj8tdurxl-3-qoium-512x512.jpg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tAI7ua2jDC" data-bs-target="#lb-tAI7ua2jDC"></a>
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -364,8 +364,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=qwerty%20garbage" class="text-info">Qwerty Garbage</a></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tAI6QOSzgz-modal" data-bs-target="#tAI6QOSzgz-modal">
-                    <a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=a.i%20tts%20jam"><img class="w-100" src="assets/images/proxy-image-596x596.png" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tAI6QOSzgz" data-bs-target="#lb-tAI6QOSzgz"></a>
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tAI7ua2jDC-modal" data-bs-target="#tAI7ua2jDC-modal">
+                    <a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=a.i%20tts%20jam"><img class="w-100" src="assets/images/proxy-image-596x596.png" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tAI7ua2jDC" data-bs-target="#lb-tAI7ua2jDC"></a>
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -374,11 +374,11 @@
             </div>
         </div>
 
-        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="tAI6QOSzgz-modal">
+        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="tAI7ua2jDC-modal">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" id="lb-tAI6QOSzgz" data-interval="5000" data-bs-interval="5000">
+                        <div class="carousel slide" id="lb-tAI7ua2jDC" data-interval="5000" data-bs-interval="5000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/20230302011936-1-596x596.png" alt="Mobirise Website Builder">
@@ -394,18 +394,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-tAI6QOSzgz" data-bs-target="#lb-tAI6QOSzgz"></li>
-                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tAI6QOSzgz" data-bs-target="#lb-tAI6QOSzgz"></li>
-                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tAI6QOSzgz" data-bs-target="#lb-tAI6QOSzgz"></li>
-                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tAI6QOSzgz" data-bs-target="#lb-tAI6QOSzgz"></li>
+                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-tAI7ua2jDC" data-bs-target="#lb-tAI7ua2jDC"></li>
+                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tAI7ua2jDC" data-bs-target="#lb-tAI7ua2jDC"></li>
+                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tAI7ua2jDC" data-bs-target="#lb-tAI7ua2jDC"></li>
+                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tAI7ua2jDC" data-bs-target="#lb-tAI7ua2jDC"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" data-bs-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-tAI6QOSzgz">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-tAI7ua2jDC">
                                 <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-tAI6QOSzgz">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-tAI7ua2jDC">
                                 <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Next</span>
                             </a>
@@ -465,11 +465,11 @@
 
 <section data-bs-version="5.1" class="slider1 cid-tugZoITPF7" id="slider1-t">
     
-    <div class="carousel slide" id="tAI6QQ9Q96" data-interval="5000" data-bs-interval="5000">
+    <div class="carousel slide" id="tAI7ubrSfb" data-interval="5000" data-bs-interval="5000">
         <ol class="carousel-indicators">
-            <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tAI6QQ9Q96" data-bs-target="#tAI6QQ9Q96"></li>
-            <li data-slide-to="1" data-bs-slide-to="1" data-target="#tAI6QQ9Q96" data-bs-target="#tAI6QQ9Q96"></li>
-            <li data-slide-to="2" data-bs-slide-to="2" data-target="#tAI6QQ9Q96" data-bs-target="#tAI6QQ9Q96"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#tAI6QQ9Q96" data-bs-target="#tAI6QQ9Q96"></li>
+            <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tAI7ubrSfb" data-bs-target="#tAI7ubrSfb"></li>
+            <li data-slide-to="1" data-bs-slide-to="1" data-target="#tAI7ubrSfb" data-bs-target="#tAI7ubrSfb"></li>
+            <li data-slide-to="2" data-bs-slide-to="2" data-target="#tAI7ubrSfb" data-bs-target="#tAI7ubrSfb"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#tAI7ubrSfb" data-bs-target="#tAI7ubrSfb"></li>
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item slider-image item active">
@@ -520,11 +520,11 @@
                 </div>
             </div>
         </div>
-        <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tAI6QQ9Q96">
+        <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tAI7ubrSfb">
             <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
             <span class="sr-only visually-hidden">Previous</span>
         </a>
-        <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tAI6QQ9Q96">
+        <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tAI7ubrSfb">
             <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
             <span class="sr-only visually-hidden">Next</span>
         </a>
@@ -581,7 +581,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2845797" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with &#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/easiest-website-builder.html">Easy Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2845797" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with &#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/easiest-website-builder.html">Easiest Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
