--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <img src="assets/images/avatars-000467405271-xt6xn6-t500x500-121x121.jpg" alt="Mobirise Website Builder" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-warning text-primary display-7" href="index.html">EVXV 's WEB ( ead vernon )</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-warning text-primary display-7" href="index.html">EVXV Network ( ead vernon )</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -63,8 +63,7 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="justdancememeedition.html">Just Dance Meme Edition</a></li>
-                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="https://www.reddit.com/r/eadvernonreuploads/?f=flair_name%3A%22Blog%22">Blog (Reddit)<br></a></li></ul>
+                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="https://www.reddit.com/r/eadvernonreuploads/?f=flair_name%3A%22Blog%22">Blog (Reddit)<br></a></li></ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://www.reddit.com/user/Past-Background-6740/" target="_blank">
                         <span class="p-2 mbr-iconfont socicon-reddit socicon"></span>
@@ -306,8 +305,8 @@
         </div>
         <div class="row mbr-gallery mt-4">
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tBgz6Imldf-modal" data-bs-target="#tBgz6Imldf-modal">
-                    <img class="w-100" src="assets/images/20230302011936-1-596x596.png" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-tBgz6Imldf" data-bs-target="#lb-tBgz6Imldf">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tBh9Xu5vjC-modal" data-bs-target="#tBh9Xu5vjC-modal">
+                    <img class="w-100" src="assets/images/20230302011936-1-596x596.png" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-tBh9Xu5vjC" data-bs-target="#lb-tBh9Xu5vjC">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -315,8 +314,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=ead%20mcmusic" class="text-info">Ead MCmusic</a></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tBgz6Imldf-modal" data-bs-target="#tBgz6Imldf-modal">
-                    <a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=meisterhaft%20remo"><img class="w-100" src="assets/images/animegan-toon-meisteemo-596x539.png" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tBgz6Imldf" data-bs-target="#lb-tBgz6Imldf"></a>
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tBh9Xu5vjC-modal" data-bs-target="#tBh9Xu5vjC-modal">
+                    <a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=meisterhaft%20remo"><img class="w-100" src="assets/images/animegan-toon-meisteemo-596x539.png" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tBh9Xu5vjC" data-bs-target="#lb-tBh9Xu5vjC"></a>
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -324,8 +323,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=meisterhaft%20remo" class="text-info">Meisterhaft Remo</a></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tBgz6Imldf-modal" data-bs-target="#tBgz6Imldf-modal">
-                    <a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=qwerty%20garbage"><img class="w-100" src="assets/images/cix2cs4diy9mj8tdurxl-3-qoium-512x512.jpg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tBgz6Imldf" data-bs-target="#lb-tBgz6Imldf"></a>
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tBh9Xu5vjC-modal" data-bs-target="#tBh9Xu5vjC-modal">
+                    <a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=qwerty%20garbage"><img class="w-100" src="assets/images/cix2cs4diy9mj8tdurxl-3-qoium-512x512.jpg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tBh9Xu5vjC" data-bs-target="#lb-tBh9Xu5vjC"></a>
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -333,8 +332,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=qwerty%20garbage" class="text-info">Qwerty Garbage</a></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tBgz6Imldf-modal" data-bs-target="#tBgz6Imldf-modal">
-                    <a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=a.i%20tts%20jam"><img class="w-100" src="assets/images/proxy-image-596x596.png" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tBgz6Imldf" data-bs-target="#lb-tBgz6Imldf"></a>
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tBh9Xu5vjC-modal" data-bs-target="#tBh9Xu5vjC-modal">
+                    <a href="https://www.reddit.com/r/eadvernonreuploads/search/?q=a.i%20tts%20jam"><img class="w-100" src="assets/images/proxy-image-596x596.png" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tBh9Xu5vjC" data-bs-target="#lb-tBh9Xu5vjC"></a>
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -343,11 +342,11 @@
             </div>
         </div>
 
-        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="tBgz6Imldf-modal">
+        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="tBh9Xu5vjC-modal">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" id="lb-tBgz6Imldf" data-interval="5000" data-bs-interval="5000">
+                        <div class="carousel slide" id="lb-tBh9Xu5vjC" data-interval="5000" data-bs-interval="5000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/20230302011936-1-596x596.png" alt="Mobirise Website Builder">
@@ -363,18 +362,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-tBgz6Imldf" data-bs-target="#lb-tBgz6Imldf"></li>
-                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tBgz6Imldf" data-bs-target="#lb-tBgz6Imldf"></li>
-                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tBgz6Imldf" data-bs-target="#lb-tBgz6Imldf"></li>
-                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tBgz6Imldf" data-bs-target="#lb-tBgz6Imldf"></li>
+                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-tBh9Xu5vjC" data-bs-target="#lb-tBh9Xu5vjC"></li>
+                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tBh9Xu5vjC" data-bs-target="#lb-tBh9Xu5vjC"></li>
+                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tBh9Xu5vjC" data-bs-target="#lb-tBh9Xu5vjC"></li>
+                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tBh9Xu5vjC" data-bs-target="#lb-tBh9Xu5vjC"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" data-bs-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-tBgz6Imldf">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-tBh9Xu5vjC">
                                 <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-tBgz6Imldf">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-tBh9Xu5vjC">
                                 <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Next</span>
                             </a>
@@ -433,11 +432,11 @@
 
 <section data-bs-version="5.1" class="slider1 cid-tugZoITPF7" id="slider1-t">
     
-    <div class="carousel slide" id="tBgz6JIQUz" data-interval="5000" data-bs-interval="5000">
+    <div class="carousel slide" id="tBh9Xvgppq" data-interval="5000" data-bs-interval="5000">
         <ol class="carousel-indicators">
-            <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tBgz6JIQUz" data-bs-target="#tBgz6JIQUz"></li>
-            <li data-slide-to="1" data-bs-slide-to="1" data-target="#tBgz6JIQUz" data-bs-target="#tBgz6JIQUz"></li>
-            <li data-slide-to="2" data-bs-slide-to="2" data-target="#tBgz6JIQUz" data-bs-target="#tBgz6JIQUz"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#tBgz6JIQUz" data-bs-target="#tBgz6JIQUz"></li>
+            <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tBh9Xvgppq" data-bs-target="#tBh9Xvgppq"></li>
+            <li data-slide-to="1" data-bs-slide-to="1" data-target="#tBh9Xvgppq" data-bs-target="#tBh9Xvgppq"></li>
+            <li data-slide-to="2" data-bs-slide-to="2" data-target="#tBh9Xvgppq" data-bs-target="#tBh9Xvgppq"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#tBh9Xvgppq" data-bs-target="#tBh9Xvgppq"></li>
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item slider-image item active">
@@ -488,11 +487,11 @@
                 </div>
             </div>
         </div>
-        <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tBgz6JIQUz">
+        <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tBh9Xvgppq">
             <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
             <span class="sr-only visually-hidden">Previous</span>
         </a>
-        <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tBgz6JIQUz">
+        <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tBh9Xvgppq">
             <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
             <span class="sr-only visually-hidden">Next</span>
         </a>
@@ -549,7 +548,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2845797" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with &#8204;</p><a style="z-index:1" href="https://mobirise.com/html-editor.html">HTML Editor</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2845797" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with &#8204;</p><a style="z-index:1" href="https://mobirise.com/drag-drop-website-builder.html">Drag & Drop Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
