--- a/donate.html
+++ b/donate.html
@@ -90,7 +90,7 @@
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style mb-4 display-5">
-                    <strong>Donate this weird nerd creator</strong></h3>
+                    <strong>Donate this weird creator</strong></h3>
             </div>
         </div>
         <div class="row justify-content-center">
@@ -98,14 +98,14 @@
                 <div class="row justify-content-center">
                     <div class="col-12 col-lg-6">
                         <ul class="list mbr-fonts-style display-5">
-                            <li><strong>Bitcoin (₿)</strong><br>177od3qH3EwpoX1MZrszPNArABcURUvv8D</li>
-                            <li><strong>Ethereum (ETH)</strong><br>0x937D2d9d115fd8526481c58f62c6b825AdA8a9BA</li><li><strong>Dogecoin</strong><br>DKkGPSsR2kXNuvaHgsi9fQ3rwnhCqeBwJn</li><li><strong>Monero</strong><br>46ZkbeT43fNDygPd6T3JyKabCdWpgfbvJCpHESJwDNFZEHv2PRGsRB5KhUsn2tJLBgTUzA8CjqQxbcY8JiW6DPMSJCXKPMJ</li><li><strong>Verge (PornHub Coin)</strong><br>DP1sBpS6MgndHzoYSy7Ts7Q4y3UMh6TdYY</li><li><strong>Cashapp:</strong> $eadvernon</li>
+                            <li><strong>Bitcoin (₿)</strong><br>1EyKxmqrFoGT36FT9Rco5nmxb7huEXhBCx</li>
+                            <li><strong> (ETH)</strong><br>0x00ab6a08D00322c604607821041B174182C7F7cc</li><li><strong>Dogecoin</strong><br>DN1Sc2v4puBxJuJ7Mgzmt9UeK3spGT79pu</li><li><strong>Monero</strong><br>45cCLDQSSNL6zzhsqbHQokZ3U5dmEV4gQfhWTQFHC5Z9YJMZDxMcR9ZJvegzGWmE6GCqTivoPQ2wz9q43X5aAeJq8GVWLGD</li><li><strong>Verge (PornHub Coin)</strong><br>DBDvNuFRBemg73W8k115HHrRPsd4Kos1UF</li><li><strong>Cashapp:</strong> $eadvernon</li>
                         </ul>
                     </div>
                     <div class="col-12 col-lg-6">
                         <ul class="list mbr-fonts-style display-5">
                             <li><strong>LBRY Credits (Odysee Token)</strong><br>bM16kUuYcAhGahZFxbrn3nLnTpJz9VqTn7</li>
-                            <li><strong>Ripple<br></strong>r3xtp4j53SWAJoseFMWHTaSimbs5HZSda9</li>
+                            <li><strong>Ripple<br></strong>rfBiWKEuKtvjTs3C8Z8tMzNzuwsN9jjtKF</li>
                         </ul>
                     </div>
                 </div>
@@ -124,7 +124,7 @@
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright since 2015-2016 Ead Vernon - All Rights Reserved
+                    © Copyright since 2015 Ead Vernon - All Rights Reserved
                 </p>
             </div>
         </div>
